--- a/Mini_Reto_A00833173/waffles-language/pom.xml
+++ b/Mini_Reto_A00833173/waffles-language/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>antlr4</artifactId>
       <version>4.13.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>antlr4-runtime</artifactId>
+      <version>4.9.2</version> <!-- or the version you're using -->
+    </dependency>
+
   </dependencies>
 
   <build>
